samples/_failures_safe/1761430464_77d81e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1552c80a.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_1552c80a.c:152:9: error: expected declaration or statement at end of input
  152 |         }
      |         ^
./samples/SAFE/__tmp_1552c80a.c:152:9: error: expected declaration or statement at end of input
